--- a/.github/workflows/build-report.yml
+++ b/.github/workflows/build-report.yml
@@ -23,12 +23,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+            - name: Generate sample dataset
+        run: |
+          python src/generate_sample_data.py
+
       - name: Run analyzer
         run: |
           python src/analyze_incidents.py data/sample_incidents.csv --out reports/incident_trends_report.xlsx
 
-      - name: Upload report artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: incident_trends_report
-          path: reports/incident_trends_report.xlsx
